--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,25 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
-  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.addCartButton {
+  @apply bg-rose-500;
 }
 
-* {
-  box-sizing: border-box;
+.addCartButton:hover {
+  @apply bg-rose-700 shadow-lg;
+}
+.top {
+  box-shadow: 0 -5px 5px -5px rgb(142, 142, 142);
+}
+.example {
+  margin-top: 1em;
+  display: block;
 }
